# HCIE

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
hcie/: __init__.py  __main__.py  alignment.py  classes.py  constants.py  database_search.py  hcie.py  interface.py  main.py  mol2_dict.py  mol2s.py  molecule.py  optimise.py  outputs.py  query.py  shaep.py  similarity_scoring.py  vehicle_search.py
hcie/Data/: pymol_visualisation.py  vehicle_sa_scores.json  vehicle_smiles.json
multi_vector/: alignment.py  constants.py  molecule.py  outputs.py  similarity_scoring.py  vehicle_search.py
tests/: test_classes.py  test_molecule.py  test_utils.py  test_vehicle_search.py
tests/Data/: acetone.xyz  similarity_hits.txt
